yaml-examples/homer/homer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: default
spec:
  ports:
  - name: default
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: homer
