yaml-examples/homer/homer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer
  namespace: default
spec:
  rules:
  - host: homer.lan
    http:
      paths:
      - backend:
          service:
            name: homer
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
